<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DrawingNoteActivity">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient2"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- 返回上一页 -->
        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/back_btn"
            android:src="@drawable/ic_back" />

        <!-- 显示工具栏按钮 -->
        <ImageView
            android:id="@+id/show_toolbar_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_show_toolbar"
            android:layout_weight="1"
            android:layout_marginStart="280dp"
            android:contentDescription="@string/show_toolbar_button"
            app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>

    <!-- 画布 -->
    <com.android.noteapp.DrawingView
        android:id="@+id/canvas_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:contentDescription="@string/view"
        app:layout_constraintBottom_toTopOf="@id/optionsHolder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <LinearLayout
        android:id="@+id/optionsHolder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient6"
        android:orientation="horizontal"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- 笔刷粗细调整器 -->
        <SeekBar
            android:id="@+id/brush_size_seekbar"
            android:layout_width="0dp"
            android:layout_height="15dp"
            android:layout_marginVertical="10dp"
            android:layout_weight="2"
            android:progressDrawable="@drawable/seekbar_progress"
            android:thumb="@drawable/seekbar_thumb"
            android:max="100"
            android:progress="1" />

        <TextView
            android:id="@+id/txtPenSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:fontFamily="@font/robotocondensed_regular"
            android:layout_marginEnd="15dp"
            android:layout_marginVertical="5dp"
            android:text="@string/_0dp"/>
        <!-- 调色板 -->
        <ImageView
            android:id="@+id/color_palette_tool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/tool_palette"
            android:src="@drawable/palette" />

        <!-- 保存按钮 -->
        <ImageView
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/save"
            android:contentDescription="@string/savebutton"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

    </LinearLayout>

    <!-- 弹出菜单或对话框 -->
    <LinearLayout
        android:id="@+id/tool_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient13"
        android:orientation="vertical"
        android:padding="8dp"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <!-- 铅笔工具 -->
        <ImageView
            android:id="@+id/pencil_tool"
            android:layout_width="wrap_content"
            android:paddingBottom="15dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/tool_pencil"
            android:src="@drawable/ic_pencil_tools" />

        <!-- 钢笔工具 -->
        <ImageView
            android:id="@+id/pen_tool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:contentDescription="@string/tools_pen"
            android:src="@drawable/ic_pen_tools" />

        <!-- 荧光笔工具 -->
        <ImageView
            android:id="@+id/highlighter_tool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:contentDescription="@string/tools_highlighter"
            android:src="@drawable/highlight_tool" />

        <!-- 毛笔工具 -->
        <ImageView
            android:id="@+id/brush_tool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:contentDescription="@string/tool_brush"
            android:src="@drawable/ic_brush_tools" />

        <!-- 画笔工具 -->
        <ImageView
            android:id="@+id/paint_tool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:contentDescription="@string/tool_paint"
            android:src="@drawable/ic_paint_tools" />

        <ImageView
            android:id="@+id/eraser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:contentDescription="@string/erasers"
            android:src="@drawable/ic_eraser_tools" />

        <!-- 撤销按钮 -->
        <ImageView
            android:id="@+id/undo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/undo"
            android:paddingBottom="15dp"
            android:src="@drawable/undo_ic" />
        <!-- 重做按钮 -->
        <ImageView
            android:id="@+id/redo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:contentDescription="@string/redo"
            android:src="@drawable/ic_redo" />

        <!-- 清除画布按钮 -->
        <ImageView
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/clear"
            android:src="@drawable/ic_clear" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>