<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient3">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="32dp">

        <!-- App logo -->
        <ImageView
            android:id="@+id/logo_image_view"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/logo_icon"
            android:src="@drawable/logo_icon"
            tools:ignore="ImageContrastCheck" />

        <!-- App title -->
        <TextView
            android:id="@+id/title_text_view"
            android:text="@string/note_bsk_title"
            android:textSize="36sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_below="@id/logo_image_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:letterSpacing="0.1"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- App version -->
        <TextView
            android:id="@+id/version_text_view"
            android:text="@string/version_1_0_0"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_below="@id/title_text_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- App description -->
        <TextView
            android:id="@+id/description_text_view"
            android:text="@string/about_us_description"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:fontFamily="@font/muli_semibolditalic"
            android:lineSpacingExtra="12dp"
            android:layout_below="@id/version_text_view"
            android:layout_marginTop="38dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!-- Contact Us button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/contact_us_button"
            android:text="@string/contact_us"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="invisible"
            android:background="@drawable/btn_shape"
            android:textColor="@color/white"
            android:layout_below="@id/description_text_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:layout_width="160dp"
            android:layout_height="50dp"/>

        <!-- Contact Us label -->
        <TextView
            android:id="@+id/contact_us_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/contact_us_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/muli_semibolditalic"
            android:textAllCaps="true"
            android:text="@string/or_contact_us"
            android:textColor="@color/gray"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <!-- Contact email -->
        <TextView
            android:id="@+id/contact_email_text_view"
            android:text="@string/contact_email"
            android:textSize="14sp"
            android:textColor="@color/purple_500"
            android:layout_below="@id/contact_us_label_text_view"
            android:layout_marginTop="8dp"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- App purpose -->
        <TextView
            android:id="@+id/purpose_text_view"
            android:text="@string/about_us_purpose"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="@font/changa"
            android:textStyle="bold"
            android:lineSpacingExtra="12dp"
            android:layout_below="@id/contact_email_text_view"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!-- Social media icons -->
        <LinearLayout
            android:id="@+id/social_media_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/purpose_text_view"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:layout_centerHorizontal="true">

            <ImageView
                android:id="@+id/facebook_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/facebook_icon"
                android:src="@drawable/ic_facebook"
                android:layout_marginEnd="32dp"/>

            <ImageView
                android:id="@+id/whatapps_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="32dp"
                android:contentDescription="@string/whatsapp_icon"
                android:src="@drawable/ic_whatapps"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/instagram_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/instagram_icon"
                android:src="@drawable/ic_intagram"/>

        </LinearLayout>

    </RelativeLayout>
</ScrollView>