<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:id="@+id/make_selection_screen_scroll_view"
    android:transitionName="transition_make_selection"
    tools:context=".MakeSelection">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/gradient"
        android:navigationIcon="@drawable/ic_back"
        android:navigationContentDescription="@string/back"
        app:navigationIconTint="@color/black"
        app:contentInsetStart="0dp"
        app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light" />

    <LinearLayout
        android:id="@+id/make_selection_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:paddingTop="?attr/actionBarSize">

        <TextView
            android:id="@+id/make_selection_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/muli_black"
            android:text="@string/make_selection"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/make_selection_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_semibolditalic"
            android:text="@string/provide_your_account_s_email_for_which_you_want_to_reset_your_password"
            android:textColor="@color/gray"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck,TextContrastCheck" />


        <RelativeLayout
            android:id="@+id/make_selection_sms_box"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/via_box"
            android:padding="10dp">

            <ImageView
                android:id="@+id/mobile_icon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/sms_phone"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:src="@drawable/sms"
                android:layout_alignParentStart="true" />


            <TextView
                android:id="@+id/mobile_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_toEndOf="@id/mobile_icon"
                android:fontFamily="@font/robotocondensed_regular"
                android:text="@string/via_sms"
                android:textSize="20sp"
                tools:ignore="VisualLintOverlap" />


            <TextView
                android:id="@+id/mobile_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mobile_title"
                android:layout_toEndOf="@id/mobile_icon"
                android:fontFamily="@font/robotocondensed_regular"
                android:text="@string/_60177157755"
                android:textColor="@color/gray"
                android:textSize="20sp"
                tools:ignore="VisualLintOverlap" />

            <Button
                android:id="@+id/btn_mobile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:contentDescription="@string/via_sms"
                android:onClick="callOTPScreenFromMakeSelection"
                tools:ignore="VisualLintButtonSize,DuplicateSpeakableTextCheck" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/make_selection_mail_box"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/via_box"
            android:padding="10dp">


            <ImageView
                android:id="@+id/mail_icon"
                android:layout_width="60dp"
                android:layout_height="55dp"
                android:contentDescription="@string/sms_email"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:src="@drawable/via_email" />


            <TextView
                android:id="@+id/mail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_toEndOf="@id/mail_icon"
                android:fontFamily="@font/robotocondensed_regular"
                android:text="@string/via_mail"
                android:textSize="20sp"
                tools:ignore="VisualLintOverlap" />


            <TextView
                android:id="@+id/mail_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mail_title"
                android:layout_toEndOf="@id/mail_icon"
                android:fontFamily="@font/robotocondensed_regular"
                android:text="@string/support_gmail_com"
                android:textColor="@color/gray"
                android:textSize="20sp"
                tools:ignore="VisualLintOverlap" />


            <Button
                android:id="@+id/btn_mail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/mailbox"
                android:background="@android:color/transparent"
                tools:ignore="VisualLintButtonSize" />

        </RelativeLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>